some alignment problems solved

--- a/src/App.css
+++ b/src/App.css
@@ -1,27 +1,25 @@
 body {
     width: 100vw;
     height: 100vh;
-   
+       
   }
   
   #root {
     width: 100%;
     height: 100%;
-    background-color: #58B792;
+   
   }
   
+  
   .App {
-    display: flex; 
-    flex-direction: column;
-    justify-content: center;
     align-items: center;
     width: 100%;
     height: 100%;
   }
   
   .square {
-    width: 800px;
-    height: 800px;
+    width: 450px;
+    height: 450px;
     display: grid;
     background-color:#282C34;
     grid-template-columns: repeat(20, 1fr);
@@ -29,9 +27,9 @@ body {
   }
   
   .box {
-    width: 40px;
-    height: 40px;
-    outline: 2px solid green;
+    width: 22.5px;
+    height: 22.5px;
+    outline: 1px solid green;
     display: inline-block;
   }
   
